# StreamCamServer

./: .dockerignore  .gitignore  DOCUMENTATION.md  Dockerfile  Dockerfile.models  Readme.md  covid-19-mask-detector.ipynb  faster_rcnn_data.py  model_manager.py  models.json  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  train_models.py
.github/workflows/: docker-publish.yml
config/: models.json
infra/docker/: Dockerfile.app  Dockerfile.models  compose.yaml  copy_models.sh
model/: README.md
notebooks/: mask_detector_4_DEBI.ipynb  train_in_colab.ipynb
scripts/: export_models.py  install_model_bundle.py  package_model_bundle.py  run_server.py  train_models.py
static/: script.js
streamcamserver/: __init__.py  app.py  inference.py  paths.py
streamcamserver/training/: __init__.py  data.py  export.py  train.py
templates/: index.html
