[project]
name = "streamcamserver"
version = "0.1.0"
description = "Add your description here"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-socketio>=5.6.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "tensorflow>=2.21.0",
    "onnxruntime>=1.20.0",
]

[dependency-groups]
notebook = [
    "accelerate",
    "datasets",
    "evaluate",
    "ipykernel",
    "jupyterlab",
    "kagglehub",
    "matplotlib",
    "onnx",
    "pandas",
    "pillow",
    "requests",
    "torch",
    "torchvision",
    "transformers",
]
